--- a/app/src/main/res/layout/course_session_recycler.xml
+++ b/app/src/main/res/layout/course_session_recycler.xml
@@ -13,6 +13,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         app:cardUseCompatPadding="true"
         tools:ignore="ContentDescription">
 
@@ -26,6 +28,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textColor="#000000"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -37,6 +41,8 @@
                 android:src="@drawable/ic_keyboard_arrow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 android:background="?android:attr/selectableItemBackground"
                 app:layout_constraintRight_toRightOf="parent"/>
 
