--- a/app/src/main/res/layout/fragment_quiz_editor.xml
+++ b/app/src/main/res/layout/fragment_quiz_editor.xml
@@ -2,104 +2,94 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.cindy.esc_50005.UI.ProfSession.SideScreens.QuizEditor"
     android:background="#59000000"
-    android:clickable="true"
-    >
+    android:clickable="true">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
+        android:orientation="vertical"
+
         android:background="#eeeeee">
 
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:orientation="vertical"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:id="@+id/questionEditor"
-            >
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/question"/>
-
-            <RadioGroup
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/radiobuttons">
-
-                <TableRow>
-                    <RadioButton
-                        android:id="@+id/option1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-                    <EditText
-                        android:id="@+id/option1ans"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
-                </TableRow>
-
-                <TableRow>
-                    <RadioButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/option2"/>
-                    <EditText
-                        android:id="@+id/option2ans"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-
-                </TableRow>
-
-                <TableRow>
-                    <RadioButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/option3"/>
-                    <EditText
-                        android:id="@+id/option3ans"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        />
-                </TableRow>
-
-                <TableRow>
-                    <RadioButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/option4"/>
-
-                    <EditText
-                        android:id="@+id/option4ans"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        />
-                </TableRow>
-
-            </RadioGroup>
-
-
-
-        </RelativeLayout>
-
-        <TextView
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Submit"
-            android:id="@+id/submitbtn"
-            android:layout_below="@id/questionEditor"
-            android:gravity="center_horizontal"
-            android:padding="10dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:background="#ffffff"
-            android:layout_marginTop="10dp"
-            />
+            android:id="@+id/questionBox" />
 
-    </RelativeLayout>
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/questionBox"
+            android:id="@+id/radiobuttons">
+
+            <TableRow>
+                <RadioButton
+                    android:id="@+id/option1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <EditText
+                    android:id="@+id/option1ans"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </TableRow>
+
+            <TableRow>
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/option2"/>
+                <EditText
+                    android:id="@+id/option2ans"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </TableRow>
+
+            <TableRow>
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/option3"/>
+                <EditText
+                    android:id="@+id/option3ans"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    />
+            </TableRow>
+
+            <TableRow>
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/option4"/>
+
+                <EditText
+                    android:id="@+id/option4ans"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    />
+            </TableRow>
+
+        </RadioGroup>
+
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Submit"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/submitbtn"
+        android:gravity="center_horizontal"
+        android:padding="10dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:background="#ffffff"
+        />
 
 
 </RelativeLayout>
