--- a/app/src/main/res/layout/student_activity_frag.xml
+++ b/app/src/main/res/layout/student_activity_frag.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.esc_50005.UI.StudentActivity.MainScreen.ActivityStudentFrag">
+    tools:context=".UI.Session.Student.StudentActivity.MainScreen.ActivityStudentFrag">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
