--- a/app/src/main/res/layout/student_answer_frag.xml
+++ b/app/src/main/res/layout/student_answer_frag.xml
@@ -1,13 +1,30 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.esc_50005.UI.StudentActivity.SideScreens.AnsweringZone">
+    tools:context=".UI.Session.Student.StudentActivity.SideScreens.AnsweringZoneFrag"
+    android:background="#59000000"
+    android:clickable="true">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_marginTop="70dp"
+        android:background="#eeeeee">
 
-</FrameLayout>
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="0dp"
+            android:id="@+id/recyclerViewStudentQns"></android.support.v7.widget.RecyclerView>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:background="#fafafa"
+            android:text="Submit"/>
+    </RelativeLayout>
+
+</RelativeLayout>
