--- a/app/src/main/res/layout/dashboard_activity.xml
+++ b/app/src/main/res/layout/dashboard_activity.xml
@@ -17,10 +17,18 @@
 
     <fragment
         android:layout_marginTop="60dp"
-        android:id="@+id/dashboardFragment"
+        android:id="@+id/professorDashboardFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         class="com.example.esc_50005.UI.Dashboard.professor.ProfessorDashboardFragment"
+        >
+    </fragment>
+    <fragment
+        android:layout_marginTop="60dp"
+        android:id="@+id/studentDashboardFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        class="com.example.esc_50005.UI.Dashboard.student.StudentDashboardFragment"
         >
     </fragment>
 
