--- a/app/src/main/res/layout/fragment_quiz_editor.xml
+++ b/app/src/main/res/layout/fragment_quiz_editor.xml
@@ -102,10 +102,7 @@
         android:id="@+id/addbtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="44dp"
+        android:layout_above="@id/submitbtn"
         android:gravity="center_horizontal"
         android:padding="10dp"
         android:text="Add another question"
