--- a/app/src/main/res/layout/student_answer_frag.xml
+++ b/app/src/main/res/layout/student_answer_frag.xml
@@ -24,7 +24,8 @@
             android:layout_alignParentBottom="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:background="#fafafa"
-            android:text="Submit"/>
+            android:text="Submit"
+            android:id="@+id/submitbutton"/>
     </RelativeLayout>
 
 </RelativeLayout>
