--- a/app/src/main/res/layout/prof_question_frag.xml
+++ b/app/src/main/res/layout/prof_question_frag.xml
@@ -24,7 +24,7 @@
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/questionbox"
+            android:layout_below="@id/questionBox"
             android:id="@+id/recyclerViewProfResponses">
 
         </android.support.v7.widget.RecyclerView>
