--- a/app/src/main/res/layout/my_progress_main.xml
+++ b/app/src/main/res/layout/my_progress_main.xml
@@ -8,13 +8,13 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:text="Progress"/>
+        <!--<TextView-->
+            <!--android:id="@+id/title"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="30dp"-->
+            <!--android:gravity="center"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:text="Progress"/>-->
 
         <!--<View-->
             <!--android:layout_width="match_parent"-->
