--- a/app/src/main/res/layout/name_list_recycler.xml
+++ b/app/src/main/res/layout/name_list_recycler.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="8dp"
+    android:paddingBottom="0dp"
     tools:context="com.example.esc_50005.UI.Course.FAQ.CourseActivity">
 
     <android.support.v7.widget.CardView
@@ -12,10 +12,10 @@
         style="@style/CardView.Light"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="-3dp"
+        android:layout_marginStart="-3dp"
         android:layout_marginTop="8dp"
-        app:cardUseCompatPadding="true"
+        app:cardUseCompatPadding="false"
         tools:ignore="ContentDescription">
 
         <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -28,8 +28,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textAppearance="@style/CardView_Title"
                 android:textColor="#000000"
+                android:paddingTop="10dp"
+                android:paddingBottom="25dp"
                 app:layout_constraintBottom_toTopOf="@+id/faq_tv_answer"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -59,9 +61,10 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
+                android:paddingBottom="5dp"
                 android:lineSpacingExtra="8dp"
                 android:text="01 March 2018"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textAppearance="@style/CardView_Subtitle"
                 android:textColor="#555555"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
