--- a/app/src/main/res/layout/course_session_recycler.xml
+++ b/app/src/main/res/layout/course_session_recycler.xml
@@ -18,38 +18,93 @@
         app:cardUseCompatPadding="true"
         tools:ignore="ContentDescription">
 
-        <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/session_details"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textAppearance="@style/CardView_Title"
                 android:textColor="#000000"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_chainStyle="packed" />
 
-            <ImageButton
-                app:layout_constraintTop_toTopOf="@+id/session_details"
-                app:layout_constraintBottom_toBottomOf="@id/session_details"
-                android:id="@+id/click_to_get_options"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="20dp"
-                android:background="@drawable/ic_vertical_with_3_dots"
 
-                android:paddingBottom="10dp"
-                android:paddingTop="10dp"
-                app:layout_constraintRight_toRightOf="parent"
-                tools:layout_editor_absoluteY="8dp" />
+            </android.support.constraint.ConstraintLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/session_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:textAppearance="@style/CardView_Subtext"
+                    android:layout_alignParentLeft="true" />
+
+                <ImageButton
+                    android:id="@+id/click_to_get_options"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="16dp"
+                    android:background="@drawable/horizontal_line_3_dots"
+                    android:layout_alignParentRight="true"
+
+                    />
+
+
+                <!--<TextView-->
+                    <!--android:id="@+id/faq_tv_time"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginBottom="16dp"-->
+                    <!--android:layout_marginEnd="16dp"-->
+                    <!--android:layout_marginStart="16dp"-->
+                    <!--android:layout_marginTop="16dp"-->
+                    <!--android:lineSpacingExtra="8dp"-->
+                    <!--android:text="01 March 2018"-->
+                    <!--android:textAppearance="@style/CardView_Subtext"-->
+                    <!--android:layout_alignParentLeft="true" />-->
+
+                <!--<TextView-->
+                    <!--android:id="@+id/faq_tv_upvote"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginBottom="16dp"-->
+                    <!--android:layout_marginEnd="16dp"-->
+                    <!--android:layout_marginStart="16dp"-->
+                    <!--android:layout_marginTop="16dp"-->
+                    <!--android:lineSpacingExtra="8dp"-->
+                    <!--android:text="2 upvotes"-->
+                    <!--android:textAppearance="@style/CardView_Subtext"-->
+                    <!--android:layout_toLeftOf="@+id/faq_btn_upvote" />-->
+
+                <!--<Button-->
+                    <!--android:id="@+id/faq_btn_upvote"-->
+                    <!--style="@style/Widget.AppCompat.Button.Borderless"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="Upvote"-->
+                    <!--android:layout_alignParentRight="true"/>-->
+            </RelativeLayout>
+
+
+        </LinearLayout>
+
 
             <!--<ImageView-->
                 <!--app:layout_constraintTop_toTopOf="@+id/session_details"-->
@@ -63,7 +118,7 @@
                 <!--android:background="?android:attr/selectableItemBackground"-->
                 <!--app:layout_constraintRight_toRightOf="parent"/>-->
 
-        </android.support.constraint.ConstraintLayout>
+
 
     </android.support.v7.widget.CardView>
 
